listed details one component

--- a/client/src/app/dialog/dialog.component.html
+++ b/client/src/app/dialog/dialog.component.html
@@ -5,5 +5,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button (click)="onNoClick()" color="warn">Annuler</button>
-  <button mat-raised-button [mat-dialog-close]="data.user" cdkFocusInitial color="primary">Valider</button>
+  <button mat-raised-button [mat-dialog-close]="data.item" cdkFocusInitial color="primary">Valider</button>
 </div>
