--- a/client/src/app/users/users.component.html
+++ b/client/src/app/users/users.component.html
@@ -75,90 +75,4 @@
   </div>
 </form>
 <div class="clearfix"></div>
-<div class="center">
-  <mat-form-field style="width:50vw">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-    <mat-icon matSuffix>search</mat-icon>
-  </mat-form-field>
-</div>
-<div class="mat-elevation-z8 center">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let element">
-        <span *ngIf="!element.edited else displayInput"> {{element.name}} </span>
-        <ng-template #displayInput>
-          <mat-form-field>
-            <input matInput value="{{element.name}}" (keyup)="edit($event.target.value, element, 'name')">
-          </mat-form-field>
-        </ng-template>
-      </td>
-    </ng-container>
-
-    <!-- Email Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-      <td mat-cell *matCellDef="let element">
-        <span *ngIf="!element.edited else displayInput"> {{element.email}} </span>
-        <ng-template #displayInput>
-          <mat-form-field>
-            <input matInput value="{{element.email}}" (keyup)="edit($event.target.value, element, 'email')">
-          </mat-form-field>
-        </ng-template>
-      </td>
-    </ng-container>
-
-    <!-- Type Column -->
-    <ng-container matColumnDef="company">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
-      <td mat-cell *matCellDef="let element">
-        <span *ngIf="!element.edited else displayInput"> {{element.company}} </span>
-        <ng-template #displayInput>
-          <mat-form-field>
-            <input matInput value="{{element.company}}" (keyup)="edit($event.target.value, element, 'company')">
-          </mat-form-field>
-        </ng-template>
-      </td>
-    </ng-container>
-
-    <!-- Statut Column -->
-    <ng-container matColumnDef="active">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> status </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-chip-list aria-label="Fish selection">
-          <mat-chip *ngIf="element.active else tempalteDesactive" color="primary" selected (click)="edit(false, element, 'active')" style="cursor: pointer;">
-            Active
-          </mat-chip>
-          <ng-template #tempalteDesactive><mat-chip color="accent" selected (click)="edit(true, element, 'active')" style="cursor: pointer;">
-            Desactive
-          </mat-chip></ng-template>
-        </mat-chip-list>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="solde">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Solde (DH) </th>
-      <td mat-cell *matCellDef="let element"> {{element.solde}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-chip color="" selected matTooltip="Edit {{element.name}}" style="margin-right:0.2rem;cursor:pointer;"
-          (click)="modeEdit(element)">
-          <i class="material-icons">edit</i>
-        </mat-chip>
-        <mat-chip color="warn" selected matTooltip="Delete {{element.name}}" style="margin-left:0.2rem;cursor:pointer;"
-          (click)="openDialog(element)">
-          <i class="material-icons">delete</i>
-        </mat-chip>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</div>
+<app-data-listed [data] = "users" [type] = 'type'></app-data-listed>
