--- a/client/src/app/data-listed/data-listed.component.html
+++ b/client/src/app/data-listed/data-listed.component.html
@@ -88,3 +88,98 @@
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+<div class="center" *ngIf="type==='cars'">
+  <mat-form-field style="width:50vw">
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+</div>
+<div class="mat-elevation-z8 center" *ngIf="type==='cars'">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- Marque Column -->
+    <ng-container matColumnDef="mark">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Marque </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="!element.edited else displayInput"> {{element.mark.name}} {{element.modele.name}}
+          ({{element.user.name}})</span>
+        <ng-template #displayInput>
+          <mat-form-field>
+            <input matInput value="{{element.mark.name}} {{element.modele.name}}" (keyup)="edit($event.target.value, element, 'mark')">
+          </mat-form-field>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- Chassis Column -->
+    <ng-container matColumnDef="chassis">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Numéro chassis </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="!element.edited else displayInput"> {{element.chassis}} </span>
+        <ng-template #displayInput>
+          <mat-form-field>
+            <input matInput value="{{element.chassis}}" (keyup)="edit($event.target.value, element, 'chassis')">
+          </mat-form-field>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- immatriculation Column -->
+    <ng-container matColumnDef="immatriculation">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Matriculation </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="!element.edited else displayInput"> {{element.immatriculation}} </span>
+        <ng-template #displayInput>
+          <mat-form-field>
+            <input matInput value="{{element.immatriculation}}"
+              (keyup)="edit($event.target.value, element, 'immatriculation')">
+          </mat-form-field>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- circulation Column -->
+    <ng-container matColumnDef="circulation">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date de circulation </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="!element.edited else displayInput"> {{element.circulation}} </span>
+        <ng-template #displayInput>
+          <mat-form-field>
+            <input matInput value="{{element.circulation}}" (keyup)="edit($event.target.value, element, 'circulation')">
+          </mat-form-field>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- moteur Column -->
+    <ng-container matColumnDef="moteur">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Moteur </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="!element.edited else displayInput"> {{element.moteur}} </span>
+        <ng-template #displayInput>
+          <mat-form-field>
+            <input matInput value="{{element.moteur}}" (keyup)="edit($event.target.value, element, 'moteur')">
+          </mat-form-field>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-chip color="" selected matTooltip="Modifier" style="margin-right:0.2rem;cursor:pointer;"
+          (click)="modeEdit(element)">
+          <i class="material-icons">edit</i>
+        </mat-chip>
+        <mat-chip color="warn" selected matTooltip="Supprimer"
+          style="margin-left:0.2rem;cursor:pointer;" (click)="openDialog(element)">
+          <i class="material-icons">delete</i>
+        </mat-chip>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
